--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,12 +1,7 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
 @import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
+@import url('./gallery.css');
+@import url('./loader.css');
+@import url('./loadMoreBtn.css');
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
